<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373535"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/cubeBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="cubeBTN"
        android:text="³ "
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#005711"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/squareBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="squareBTN"
        android:text="²"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#005711"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/eightBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="eightBTN"
        android:text="@string/eight"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fiveBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="fiveBTN"
        android:text="@string/five"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/nineBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="nineBTN"
        android:text="@string/nine"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sixBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="sixBTN"
        android:text="@string/six"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/backspaceBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/backspace"
        android:onClick="backspaceBTN"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:strokeWidth="5dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/subtractBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="subtractBTN"
        android:text="@string/subtract"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#005711"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/equalsBTN"
        android:layout_width="179dp"
        android:layout_height="82dp"
        android:onClick="equalsBTN"
        android:text="@string/equals"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/multiplyBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="multiplyBTN"
        android:text="@string/multiply"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#005711"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/divideBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="divideBTN"
        android:text="@string/divide"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#005711"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/threeBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="threeBTN"
        android:text="@string/three"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="addBTN"
        android:text="@string/add"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#005711"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/zeroBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="zeroBTN"
        android:text="@string/zero"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/twoBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="twoBTN"
        android:text="@string/two"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/clearBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="clearBTN"
        android:text="AC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#057111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sevenBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="sevenBTN"
        android:text="@string/seven"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/oneBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="oneBTN"
        android:text="@string/one"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fourBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="fourBTN"
        android:text="@string/four"
        android:textSize="30sp"
        android:textStyle="italic"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="391dp"
        android:layout_height="103dp"
        android:autofillHints="false"
        android:inputType="none"
        android:maxLength="25"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227"
        tools:ignore="LabelFor,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>